# confy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  project.md  vcpkg.json  winbuild2019.bat  winbuild2019.ps1
.github/workflows/: windows.yml
build2/: CMakeCache.txt
samples/: config.invalid-regex.xml  config.path-macro.xml  config.sample.two-components.xml  config.sample.xml
src/: App.cpp  App.h  AppInfo.h  AppSettings.cpp  AppSettings.h  AuthCredentials.cpp  AuthCredentials.h  BitbucketClient.cpp  BitbucketClient.h  ConfigLoader.cpp  ConfigLoader.h  ConfigModel.h  ConfigWriter.cpp  ConfigWriter.h  DebugConsole.cpp  DebugConsole.h  DownloadProgressDialog.cpp  DownloadProgressDialog.h  DownloadWorkerQueue.cpp  DownloadWorkerQueue.h  GitClient.cpp  GitClient.h  JobTypes.h  MainFrame.cpp  MainFrame.h  NexusClient.cpp  NexusClient.h  PickMenuFrame.cpp  PickMenuFrame.h  main.cpp
tests/: AuthCredentialsTest.cpp  BitbucketClientTest.cpp  ConfigLoaderFileErrorTest.cpp  ConfigLoaderPathMacroTest.cpp  ConfigLoaderRegexValidationTest.cpp  ConfigWriterTest.cpp  DownloadWorkerQueueTest.cpp  GitClientTest.cpp  NexusClientAuthTest.cpp  NexusClientPathSegmentTest.cpp  ParserSmokeTest.cpp
